flux/infrastructure/observability/prometheus-operator/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: grafana
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "grafana.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: prometheus-grafana
                port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: alertmanager
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "alertmanager.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: prometheus-kube-prometheus-alertmanager
                port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: thanos-bucketweb
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "thanos-bucketweb.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: thanos-bucketweb
                port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: thanos-query
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "thanos-query.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: thanos-query-frontend
                port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: thanos-compactor
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "thanos-compactor.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: thanos-compactor
                port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: prometheus
    namespace: observability
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "prometheus.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: prometheus-kube-prometheus-prometheus
                port: 9090
